@@ -1,4 +1,3 @@
-//This class controls all entity actions
 #pragma once
 #include <vector>
 #include "Entity.h"
@@ -6,22 +5,23 @@
 #include "Map.h"
 #include "World.h"
 
+
 class EntityControl
 {
 public:
 
-	int const MAX_ENTITIES = 128;
+	int const MAX_ENTITIES = 512;
+	int const MAX_TREES = MAX_ENTITIES / 2;
 
 	EntityControl(Map* map, Graphics* graphics, World* world);
 	~EntityControl();
-	bool removeEntity(Entity* entity);
-	Tree* spawnTree(int x, int y);
+	Tree* spawnTree(int tileX, int tileY, bool seeded);
+	void populateMap(Map* map);
 	void entityInteraction(int framerate);
-	
+
 private:
 
 	std::vector<Entity*> entities;
-	std::vector<Entity*>::iterator entityIterator;
 	Map* map;
 	World* world;
 	Graphics* graphics;
@@ -29,9 +29,9 @@ private:
 	const int TREE_FRAME_HEIGHT = 64;
 	const int TREE_FRAMECOUNT = 7;
 
-	
-	bool addNewEntity(Entity* entity);
 
+	bool addNewEntity(Entity* entity);
 	void collisionsMap(Entity* entity);
+	void vegetationHandling();
 };
 
