@@ -4,9 +4,22 @@
 #include <stdio.h>
 
 //Tree constructor, calling superclass
-Tree::Tree(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world) : Entity(x, y, graphics, texture, FRAME_COUNT, FRAME_WIDTH, FRAME_HEIGHT, world)
+Tree::Tree(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world, bool seeded) : Entity(x, y, graphics, texture, FRAME_COUNT, FRAME_WIDTH, FRAME_HEIGHT, world)
 {
-	treeState = TreeEnumeration::TREE_SEEDED; //Tree begins seeded for now
+	using namespace TreeEnumeration;
+	//Spawn as a tiny seed or at a random size
+	if (seeded)
+	{
+		treeState = TREE_SEEDED;
+	}
+	else
+	{
+		const TREE_STATE TREE_STATES[5] = { TREE_SEEDED, TREE_SAPLING, TREE_BIGGER_SAPLING, TREE_SMALL, TREE_FULL_SIZE };
+		treeState = TREE_STATES[Functions::generateRandomNumber(0, 4)]; //Randomize tree state
+	}
+
+	growth = Functions::generateRandomNumber(0, 50);
+	maxGrothFullSize = TREE_GROWTH_RATE_FULL_SIZE_TO_DEATH_AVERAGE + Functions::generateRandomNumber(-50, 50);
 }
 
 //Tree Destructor
@@ -26,9 +39,10 @@ void Tree::render()
 void Tree::calcFrame(int framerate)
 {
 	using namespace TreeEnumeration;
+
 	if (treeState == TREE_FULL_SIZE)
 	{
-		currentFrame = TREE_STATUS_TOTAL + world->getCurrentSeason();
+		currentFrame = TREE_FULL_SIZE + 1 + world->getCurrentSeason();
 		//Set frame according to status
 	}
 	else
@@ -61,9 +75,9 @@ void Tree::calcFrame(int framerate)
 void Tree::growTree(int framerate, double rate)
 {
 	using namespace TreeEnumeration;
-	if (treeState < TREE_FULL_SIZE)
+	if (treeState < TREE_DEAD)
 	{
-		int growthCap[4] = { TREE_GROWTH_RATE_SEEDED_TO_SAPLING, TREE_GROWTH_RATE_SAPLING_TO_BIGGER_SAPPLING, TREE_GROWTH_RATE_BIGGER_SAPPLING_TO_SMALL, TREE_GROWTH_RATE_SMALL_TO_FULL_SIZE };
+		int growthCap[5] = { TREE_GROWTH_RATE_SEEDED_TO_SAPLING, TREE_GROWTH_RATE_SAPLING_TO_BIGGER_SAPPLING, TREE_GROWTH_RATE_BIGGER_SAPPLING_TO_SMALL, TREE_GROWTH_RATE_SMALL_TO_FULL_SIZE, (int)maxGrothFullSize };
 
 		//Tree increments state
 		if (growthCap[treeState] <= (int)growth)
@@ -82,6 +96,9 @@ void Tree::growTree(int framerate, double rate)
 			case TREE_SMALL:
 				treeState = TREE_FULL_SIZE;
 				break;
+			case TREE_FULL_SIZE:
+				treeState = TREE_DEAD;
+				break;
 			}
 			growth = 0;
 		}
@@ -95,4 +112,19 @@ void Tree::growTree(int framerate, double rate)
 void Tree::proceed(int framerate)
 {
 	growTree(framerate, 1);
+}
+
+//Returns if this tree is dead and therefor is obsolete
+bool Tree::flaggedForRemoval()
+{
+
+	if (treeState == TreeEnumeration::TREE_DEAD)
+	{
+		return true;
+	}
+	else
+	{
+
+		return false;
+	}
 }
