@@ -4,14 +4,15 @@
 
 namespace TreeEnumeration
 {
-	typedef enum TREE_STATUS
+	typedef enum TREE_STATE
 	{
 		TREE_SEEDED = 0,
 		TREE_SAPLING,
 		TREE_BIGGER_SAPLING,
 		TREE_SMALL,
 		TREE_FULL_SIZE,
-		TREE_STATUS_TOTAL
+		TREE_DEAD,
+		TREE_STATE_TOTAL
 	};
 	typedef enum TREE_GROWTH_RATE
 	{
@@ -19,6 +20,7 @@ namespace TreeEnumeration
 		TREE_GROWTH_RATE_SAPLING_TO_BIGGER_SAPPLING = 100,
 		TREE_GROWTH_RATE_BIGGER_SAPPLING_TO_SMALL = 200,
 		TREE_GROWTH_RATE_SMALL_TO_FULL_SIZE = 500,
+		TREE_GROWTH_RATE_FULL_SIZE_TO_DEATH_AVERAGE = 1000
 	};
 	//TREE_STATUS& operator++(TREE_STATUS& t)
 	//{
